home: fix alignment of kirigami section

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,7 +1,3 @@
-#kirigami {
-  background-color: rgba(218,68,83,.07);
-}
-
 main section {
   margin-top: 0;
   padding-top: 30px;
@@ -302,13 +298,10 @@ main h3 {
 }
 
 .kirigami-devices {
-  width: auto;
-  height: 500px;
-  // Align with bottom
-  margin-bottom: -3rem;
-  @media (max-width: 700px) {
-    height: 200px;
-  }
+  align-self: center;
+  max-height: 600px;
+  height: 100%;
+  margin-left: auto;
 }
 
 .terminal {
